# rustfsm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: mario.rs
src/: lib.rs
tests/: integration.rs
